<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.main.MainActivity">

    <!-- => Done TODO (2 points): Convert to ConstraintLayout -->
    <!-- => Done TODO (1 point): Address Android Studio warnings -->

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_random_user"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAppearance="?textAppearanceHeadline4" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title">


        <ImageView
            android:id="@+id/main_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="#33aaaaaa"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/main_image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/main_image"
            app:layout_constraintBaseline_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp">
            <TextView
                android:id="@+id/main_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?textAppearanceBody2"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/main_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAppearance="?textAppearanceBody2"
                tools:text="Jon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/main_name_label"/>


            <TextView
                android:id="@+id/main_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAppearance="?textAppearanceBody2"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/main_name_label"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/main_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:textAppearance="?textAppearanceBody2"
                tools:text="robert@test.com"
                app:layout_constraintStart_toEndOf="@+id/main_email_label"
                app:layout_constraintTop_toTopOf="@+id/main_email_label"/>

            <Button
                android:id="@+id/main_see_details_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/view_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_email"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/main_refresh_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/refresh_random_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileLayout"/>



    <View
        android:id="@+id/main_divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_below="@id/main_refresh_button"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_refresh_button"
        android:background="#11111111" />

    <Button
        android:id="@+id/main_user_list_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_divider"
        android:text="@string/show_10_users"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_divider"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- => Done TODO (5 points): Convert to RecyclerView -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_user_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_user_list_button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/main_user_list_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
